Update terminology: documents → data
Reflects broader scope - Krakenly works with all user data formats, not just documents

--- a/services/web-manager/static/index.html
+++ b/services/web-manager/static/index.html
@@ -99,7 +99,7 @@
                 <div class="chat-messages" id="chat-messages">
                     <div class="message assistant">
                         <div class="message-content">
-                            Hello! I'm Krakenly, your document-grounded AI assistant. Ask me anything about your indexed files!
+                            Hello! I'm Krakenly, your data-grounded AI assistant. Ask me anything about your indexed data!
                         </div>
                     </div>
                 </div>
