--- a/services/web-manager/static/index.html
+++ b/services/web-manager/static/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krakenly</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦑</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐙</text></svg>">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🦑 Krakenly</h1>
+            <h1>🐙 Krakenly</h1>
             <div id="status" class="status">
                 <span class="status-dot"></span>
                 <span class="status-text">Checking...</span>
@@ -113,7 +113,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="https://github.com/krakenly/krakenly" target="_blank" rel="noopener">🦑 Krakenly on GitHub</a>
+        <a href="https://github.com/krakenly/krakenly" target="_blank" rel="noopener">🐙 Krakenly on GitHub</a>
     </footer>
 
     <!-- Delete Confirmation Modal -->
